--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: false
 language: node_js
 node_js:
-  - "9.4.0"
+  - "11.7.0"
 
 env:
   global:
-    - YARN_VERSION=1.3.2
+    - YARN_VERSION=1.13.0
 
 before_install:
   - export PATH="$HOME/.yarn/bin:$PATH"
@@ -13,6 +13,9 @@ before_install:
     if [[ ! -e ~/.yarn/bin/yarn || $(yarn --version) != "${YARN_VERSION}" ]]; then
       curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version $YARN_VERSION
     fi
+
+install:
+  - yarn install --pure-lockfile
 
 script:
   - yarn run build
@@ -24,4 +27,5 @@ cache:
     - node_modules
 
 notifications:
-  email: evenchange4@gmail.com
+  email:
+   - evenchange4@gmail.com
