--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "private": true,
   "version": "0.1.0",
   "dependencies": {
-    "apollo-cache-inmemory": "1.1.5",
-    "apollo-client": "2.2.1",
-    "apollo-link-http": "1.3.2",
-    "graphql": "0.12.3",
-    "graphql.macro": "1.0.2",
-    "react": "16.2.0",
-    "react-apollo": "2.0.4",
-    "react-dom": "16.2.0",
-    "react-scripts": "next"
+    "apollo-cache-inmemory": "1.4.2",
+    "apollo-client": "2.4.12",
+    "apollo-link-http": "1.5.9",
+    "graphql": "14.1.1",
+    "graphql.macro": "1.3.0",
+    "react": "16.8.0-alpha.1",
+    "react-apollo": "2.4.0",
+    "react-dom": "16.8.0-alpha.1",
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "browserslist": {
     "development": [
